--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>FoodFind Website</h1>
+    <div class="head">
+        <header>
+            <h1>FOODFINDA</h1>
+            <h3>Call +01 23456789</h3>
+            <h3>Email : mail@foodfinda.com</h3>
+        </header>
+    </div>
+    <div class="nav">
+        <ul>
+            <li>HOME</li>
+            <li>SERVICES</li>
+            <li>ABOUT</li>
+            <li>BLOG</li>
+            <li>SHOP</li>
+            <li>CONTACTS</li>
+        </ul>
+    </div>
+    <div class="body">
+        <h1>Find The Best Restaurants Cafes And Bars in YOUR CITY</h1>
+        <label class="drop" type="select">
+           <select>
+            <option>All Category</option>
+            <option>Action1</option>
+            <option>Action2</option>
+            <option>Someting else</option>
+           </select>   
+        </label>
+        <input type="search" class="search" value="Search this blog">
+        <h1>Order Now</h1>
+    </div>
 </body>
 </html>
