--- a/index.html
+++ b/index.html
@@ -4,37 +4,191 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
 </head>
 <body>
-    <div class="head">
-        <header>
-            <h1>FOODFINDA</h1>
-            <h3>Call +01 23456789</h3>
-            <h3>Email : mail@foodfinda.com</h3>
+    <div>
+        <header class="headerContainer">
+            <h3 class="contact">Call +01 23456789</h3>
+            <div class="companyName">
+            <img src="./images/logo.png"> 
+            </div>
+            <h3 class="contact">Email : mail@foodfinda.com</h3>
         </header>
     </div>
-    <div class="nav">
-        <ul>
-            <li>HOME</li>
+    <div class="background">
+        <div class="layout"> 
+        <div class="navBackground">
+        <ul class="nav">
+            <li class="activegreen">HOME</li>
             <li>SERVICES</li>
             <li>ABOUT</li>
             <li>BLOG</li>
             <li>SHOP</li>
             <li>CONTACTS</li>
+            <li class="dif">LOGIN</li>
         </ul>
-    </div>
-    <div class="body">
-        <h1>Find The Best Restaurants Cafes And Bars in YOUR CITY</h1>
-        <label class="drop" type="select">
-           <select>
-            <option>All Category</option>
-            <option>Action1</option>
-            <option>Action2</option>
-            <option>Someting else</option>
-           </select>   
-        </label>
-        <input type="search" class="search" value="Search this blog">
-        <h1>Order Now</h1>
+        </div>
+        <div class="mainContainer">
+           <div class="Contain">
+           <div class="textContainer">
+              <p class="text">Find The Best Restaurants Cafes And Bars in <br/> <span class="city">YOUR CITY</span></p>
+           </div>
+           <div class="dropdown">
+              <select class="optionContainer">
+                  <option>All Category</option>
+                  <option>Action1</option>
+                  <option>Action2</option>
+                  <option>Someting else</option>
+              </select>   
+              <input type="search" class="search" value="Search this blog">
+           </div>
+               <h1 class="Order">Order Now</h1> 
+               <h1 class="menuHead">Quick Searches</h1>
+            <div class="menuImage">
+                <div class="image">
+                    <div class="breakfast">
+                    <img src="images/breakfast-img.png">
+                    </div>
+                    <h1 class="breakfastText">Breakfast</h1>
+                    <div class="seeButton">SEE MORE</div>
+                </div>
+                <div class="image">
+                    <div class="breakfast">
+                    <img src="images/delivery-img.png">
+                    </div>
+                    <h1 class="breakfastText">Delivery</h1>
+                    <div class="seeButton">SEE MORE</div>
+                </div>
+                <div class="image">
+                    <div class="breakfast">
+                        <img src="images/dinner-img.png">
+                    </div>
+                    <h1 class="breakfastText">Dinner</h1>
+                    <div class="seeButton">SEE MORE</div>
+                </div>
+                <div class="image">
+                    <div class="breakfast">
+                        <img src="images/coffee-img.png">
+                    </div>
+                    <h1 class="breakfastText">Coffee</h1>
+                    <div class="seeButton">SEE MORE</div>
+                </div>
+                <div class="image">
+                    <div class="breakfast">
+                        <img src="images/alcohol-img.png">
+                    </div>
+                    <h1 class="breakfastText">Alcohol</h1>
+                    <div class="seeButton">SEE MORE</div>
+                </div>
+                <div class="image">
+                    <div class="breakfast">
+                        <img src="images/diningtable-img.png">
+                    </div>
+                    <h1 class="breakfastText">Diningtable</h1>
+                    <div class="seeButton">SEE MORE</div>
+                </div>    
+            </div> 
+            <div class="blogHead">
+                <h1>Collections Food In city</h1>
+            </div>
+            <div class="blog">
+                <div class="blogImage">
+                    <img src="/images/blog-img1.png">
+                </div>
+                <div class="blogText">
+                    <h1 class="title">This Week going</h1>
+                    <p class="paratext">Long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed</p>
+                    <div class="readButton">READ MORE</div>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="blogImage">
+                    <img src="/images/blog-img2.png">
+                </div>
+                <div class="blogText">
+                    <h1 class="title">Just Delivery Food</h1>
+                    <p class="paratext">Long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed</p>
+                    <div class="readButton">READ MORE</div>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="blogImage">
+                    <img src="images/blog-img3.png">
+                </div>
+                <div class="blogText">
+                    <h1 class="title">Newly Opened Cafe</h1>
+                    <p class="paratext">Long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed</p>
+                    <div class="readButton">READ MORE</div>
+                </div>
+            </div>
+            <div class="mainArea">
+            <div class="contain">
+                <div class="content">
+                <h1 class="getApp">
+                    Get the<br>
+                    <span class="styleLine">Food Finda App</span>
+                </h1>
+                <p class="getText">
+                    Long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+                </p>
+                <div class="mainIcon">
+                    <div class="icon">
+                        <img src="images/icon-1.png">
+                    </div>
+                    <div class="icon">
+                        <img src="images/icon-2.png">
+                    </div>
+                </div>
+                <div class="download">
+                    <h1>Download Now</h1>
+                </div>
+                </div>
+            </div> 
+            <div class="contain">
+                <div class="mobileImg">
+                    <img src="images/mobile-img.png">
+                </div>
+            </div>
+            </div>
+            <div class="customer">
+                <div class="customerHead">
+                    <h1 class="customerText">Customers Says</h1>
+                </div>
+                <div class="customerOpi">
+                    <div class="opinionBox">
+                        <h4 class="opinionText">Loliy Mark</h4>
+                        <p class="boxText">
+                            Now use Lorem Ipsum as their default model text, and a search for 'loremnow use Lorem Ipsum as their default model text, and a search for 'lorem
+                        </p>
+                    </div>
+                    <div class="opinionBox">
+                        <h4 class="opinionText">Den Mark</h4>
+                        <p class="boxText">
+                            Now use Lorem Ipsum as their default model text, and a search for 'loremnow use Lorem Ipsum as their default model text, and a search for 'lorem
+                        </p>
+                    </div>
+                    <div class="opinionBox">
+                        <h4 class="opinionText">Jonshon Mark</h4>
+                        <p class="boxText">
+                            Now use Lorem Ipsum as their default model text, and a search for 'loremnow use Lorem Ipsum as their default model text, and a search for 'lorem
+                        </p>
+                    </div>
+                </div>
+                <div class="sliderbtn">
+                    <div class="slide">
+                        <img>
+                    </div>
+                    <div class="slide">
+                        <img>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
     </div>
 </body>
 </html>
