add icon social media

--- a/index.html
+++ b/index.html
@@ -178,14 +178,112 @@
                     </div>
                 </div>
                 <div class="sliderbtn">
-                    <div class="slide">
-                        <img>
+                    <div class="slideleft">
+                        <div class="slide">
+                             <img class="imageleft" src="images/left-arrow.png">
+                        </div>
                     </div>
-                    <div class="slide">
-                        <img>
+                    <div class="slideright">
+                        <div class="slide">
+                             <img class="imageright" src="images/right-arrow.png">
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="formSection">
+                <div class="formBackground">
+                    <div class="formDetails">
+                        <div class="detail">
+                            <h1 class="formHead">Get In Touch</h1>
+                            <form method="post">
+                                <div class="detailSection">
+                                    <input class="inform" type="text" placeholder="Name" name="Name">
+                                    <input class="inform" type="text" placeholder="Phone Number" name="Phone Number">
+                                    <input class="inform" type="text" placeholder="Email" name="Email">
+                                    <textarea class="comment" placeholder="Massage" name="Massage" rows="5"></textarea>
+                                    <div class="sendBtn">
+                                        <h2>SEND</h2>
+                                    </div>    
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="orderSection">
+                        <div class="orderSet">
+                            <div class="orderText">
+                                <h1>ORDER BEST FOOD AT TIME</h1>
+                            </div>
+                            <div class="orderBtn">
+                                <h2>ORDER NOW</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+            <div class="footerSection">
+                <div class="mainFooter">
+                    <div class="containFooter">
+                        <div class="footerDetails">
+                            <h2 class="footerLogo">FOODFINDA</h2>
+                            <p class="footerText">is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of
+                            </p>
+                        </div>
+                        <div class="footerDetails">
+                            <h3 class="listText">NAVIGATION</h3>
+                            <div class="footerMenu">
+                                <ul>
+                                    <li class="active">Home</li>
+                                    <li>About</li>
+                                    <li>Location</li>
+                                    <li>Services</li>
+                                    <li>Features</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="footerDetails">
+                            <h3 class="listText">CONTACT INFO</h3>
+                            <p class="addressText">Office Address</p>
+                            <div class="location">
+                                <h4 class="locationText">Loram ipsum New York, NY 36524</h4>
+                            </div>
+                            <p class="addressText">Customer Service</p>
+                            <div class="location">
+                                <h4 class="locationText">(+01 23456789)</h4>
+                            </div>
+                            <div class="location">
+                                <h4 class="locationText">mail@domain.com</h4>
+                            </div>
+                        </div>
+                        <div class="footerDetails">
+                            <h3 class="listText">DISCOVER</h3>
+                            <div class="subMenu">
+                                <ul>
+                                    <li>Help</li>
+                                    <li>How It Works</li>
+                                    <li>subscribe</li>
+                                    <li>Contact Us</li>
+                                </ul>
+                            </div>
+                            <div class="socialMedia">
+                                <ul>
+                                    <li>
+                                        <img>
+                                    </li>
+                                    <li>
+                                        <img>
+                                    </li>
+                                    <li>
+                                        <img>
+                                    </li>
+                                    <li>
+                                        <img>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>   
         </div>
         </div>
         </div>
