--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
         <div class="navBackground">
         <ul class="nav">
             <li class="activegreen">HOME</li>
-            <li>SERVICES</li>
+            <li><a href="./pages/service.html">
+
+                SERVICES</li>
+            </a>
             <li>ABOUT</li>
             <li>BLOG</li>
             <li>SHOP</li>
-            <li>CONTACTS</li>
+            <li> <a href="#contact"> CONTACTS </a>
+        </li>
             <li class="dif">LOGIN</li>
         </ul>
         </div>
@@ -47,7 +51,7 @@
            </div>
                <h1 class="Order">Order Now</h1> 
                <h1 class="menuHead">Quick Searches</h1>
-            <div class="menuImage">
+            <div id="service" class="menuImage">
                 <div class="image">
                     <div class="breakfast">
                     <img src="images/breakfast-img.png">
@@ -222,23 +226,23 @@
             </div> 
             <div class="footerSection">
                 <div class="mainFooter">
-                    <div class="containFooter">
+                    <div id="contact" class="containFooter">
                         <div class="footerDetails">
                             <h2 class="footerLogo">FOODFINDA</h2>
                             <p class="footerText">is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of
                             </p>
                         </div>
                         <div class="footerDetails">
-                            <h3 class="listText">NAVIGATION</h3>
+                          <h3 class="listText">NAVIGATION</h3>
                             <div class="footerMenu">
-                                <ul>
+                                <ul class="points">
                                     <li class="active">Home</li>
                                     <li>About</li>
                                     <li>Location</li>
                                     <li>Services</li>
                                     <li>Features</li>
                                 </ul>
-                            </div>
+                            </div>    
                         </div>
                         <div class="footerDetails">
                             <h3 class="listText">CONTACT INFO</h3>
@@ -257,7 +261,7 @@
                         <div class="footerDetails">
                             <h3 class="listText">DISCOVER</h3>
                             <div class="subMenu">
-                                <ul>
+                                <ul class="discoverPoints">
                                     <li>Help</li>
                                     <li>How It Works</li>
                                     <li>subscribe</li>
@@ -265,24 +269,27 @@
                                 </ul>
                             </div>
                             <div class="socialMedia">
-                                <ul>
+                                <ul class="mediaPoint">
                                     <li>
-                                        <img>
+                                        <img class="face" src="images/facebook.png">
                                     </li>
                                     <li>
-                                        <img>
+                                        <img class="twit" src="images/twitter.png">
                                     </li>
                                     <li>
-                                        <img>
+                                        <img class="linked" src="images/linkedin.png">
                                     </li>
                                     <li>
-                                        <img>
+                                        <img class="insta" src="images/instagram.png">
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="last">
+                <h3 class="Byhtml">2045 All Rights Reserved. By HTML Design</h3>
             </div>   
         </div>
         </div>
