images blog fixing

--- a/index.html
+++ b/index.html
@@ -100,20 +100,20 @@
             </div>
             <div class="blog">
                 <div class="blogImage">
-                    <img src="/images/blog-img1.png">
+                    <img src="images/blog-img3.png">
                 </div>
                 <div class="blogText">
-                    <h1 class="title">This Week going</h1>
+                    <h1 class="title">Newly Opened Cafe</h1>
                     <p class="paratext">Long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed</p>
                     <div class="readButton">READ MORE</div>
                 </div>
             </div>
             <div class="blog">
                 <div class="blogImage">
-                    <img src="/images/blog-img2.png">
+                    <img src="images/blog-img3.png">
                 </div>
                 <div class="blogText">
-                    <h1 class="title">Just Delivery Food</h1>
+                    <h1 class="title">Newly Opened Cafe</h1>
                     <p class="paratext">Long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed</p>
                     <div class="readButton">READ MORE</div>
                 </div>
