media query along with script learning

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
 </head>
 <body>
-    <div>
+    <div >
         <header class="headerContainer">
             <h3 class="contact">Call +01 23456789</h3>
             <div class="companyName">
@@ -18,6 +17,7 @@
             <h3 class="contact">Email : mail@foodfinda.com</h3>
         </header>
     </div>
+    <!-- <div id="trial"></div> -->
     <div class="background">
         <div class="layout"> 
         <div class="navBackground">
@@ -38,7 +38,8 @@
         <div class="mainContainer">
            <div class="Contain">
            <div class="textContainer">
-              <p class="text">Find The Best Restaurants Cafes And Bars in <br/> <span class="city">YOUR CITY</span></p>
+              <p class="text">Find The Best Restaurants Cafes And Bars in </p>
+              <h1 class="city">YOUR CITY</h1>
            </div>
            <div class="dropdown">
               <select class="optionContainer">
@@ -54,42 +55,42 @@
             <div id="service" class="menuImage">
                 <div class="image">
                     <div class="breakfast">
-                    <img src="images/breakfast-img.png">
+                    <img class="image1" src="images/breakfast-img.png">
                     </div>
                     <h1 class="breakfastText">Breakfast</h1>
                     <div class="seeButton">SEE MORE</div>
                 </div>
                 <div class="image">
                     <div class="breakfast">
-                    <img src="images/delivery-img.png">
+                    <img class="image1" src="images/delivery-img.png">
                     </div>
                     <h1 class="breakfastText">Delivery</h1>
                     <div class="seeButton">SEE MORE</div>
                 </div>
                 <div class="image">
                     <div class="breakfast">
-                        <img src="images/dinner-img.png">
+                        <img class="image1" src="images/dinner-img.png">
                     </div>
                     <h1 class="breakfastText">Dinner</h1>
                     <div class="seeButton">SEE MORE</div>
                 </div>
                 <div class="image">
                     <div class="breakfast">
-                        <img src="images/coffee-img.png">
+                        <img class="image1" src="images/coffee-img.png">
                     </div>
                     <h1 class="breakfastText">Coffee</h1>
                     <div class="seeButton">SEE MORE</div>
                 </div>
                 <div class="image">
                     <div class="breakfast">
-                        <img src="images/alcohol-img.png">
+                        <img class="image1" src="images/alcohol-img.png">
                     </div>
                     <h1 class="breakfastText">Alcohol</h1>
                     <div class="seeButton">SEE MORE</div>
                 </div>
                 <div class="image">
                     <div class="breakfast">
-                        <img src="images/diningtable-img.png">
+                        <img class="image1" src="images/diningtable-img.png">
                     </div>
                     <h1 class="breakfastText">Diningtable</h1>
                     <div class="seeButton">SEE MORE</div>
@@ -100,7 +101,7 @@
             </div>
             <div class="blog">
                 <div class="blogImage">
-                    <img src="images/blog-img3.png">
+                    <img class="imageBlog" src="images/blog-img3.png">
                 </div>
                 <div class="blogText">
                     <h1 class="title">Newly Opened Cafe</h1>
@@ -110,7 +111,7 @@
             </div>
             <div class="blog">
                 <div class="blogImage">
-                    <img src="images/blog-img3.png">
+                    <img class="imageBlog" src="images/blog-img3.png">
                 </div>
                 <div class="blogText">
                     <h1 class="title">Newly Opened Cafe</h1>
@@ -120,7 +121,7 @@
             </div>
             <div class="blog">
                 <div class="blogImage">
-                    <img src="images/blog-img3.png">
+                    <img class="imageBlog" src="images/blog-img3.png">
                 </div>
                 <div class="blogText">
                     <h1 class="title">Newly Opened Cafe</h1>
@@ -294,7 +295,9 @@
         </div>
         </div>
         </div>
-        <h1>@</h1>
+        </div>
+        </div>  
     </div>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
